[tool.poetry]
name = "api-leadsurge"
version = "0.1.0"
description = ""
authors = ["Flank <84662548+3xqw@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.0"
instagrapi = "2.0.0"
gunicorn = "21.2.0"
flask-cors = "4.0.0"
pillow = "10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
